--- a/index.html
+++ b/index.html
@@ -197,9 +197,180 @@
 
 <!-- ===== GALLERY ===== -->
 <section id="gallery" class="tab-content section">
-  <h2 class="section-title">Gallery</h2>
-  <p class="subtitle">A curated set of project visuals and maps.</p>
+  <!-- Header card -->
+  <div class="gallery-head glassbox lift">
+    <div class="gallery-title-row">
+      <div>
+        <h2 class="section-title">Photo Gallery</h2>
+        <p class="subtitle">A curated collection from my work at LUMS &amp; WWF, community projects, PU campus moments, and personal art.</p>
+      </div>
+      <div class="gallery-stats">
+        <div class="stat"><span id="g-count">0</span><small>Photos</small></div>
+        <div class="stat"><span id="g-sections">0</span><small>Sections</small></div>
+        <div class="stat"><span id="g-updated">—</span><small>Last Updated</small></div>
+      </div>
+    </div>
+
+    <!-- Filters -->
+    <div class="gallery-filters">
+      <button class="pill active" data-filter="all">All</button>
+      <button class="pill" data-filter="lums">Professional — LUMS</button>
+      <button class="pill" data-filter="wwf">Professional — WWF</button>
+      <button class="pill" data-filter="community">Community Projects</button>
+      <button class="pill" data-filter="pu">University Life (PU)</button>
+      <button class="pill" data-filter="art">Art &amp; Hobbies</button>
+    </div>
+  </div>
+
+  <!-- Masonry grid -->
+  <div class="masonry" id="masonry">
+
+    <!-- LUMS -->
+    <h3 class="gallery-section">Professional — LUMS</h3>
+
+    <figure class="card" data-cat="lums">
+      <a href="gallery/pra-meeting-2.jpg" data-caption="PRA meeting — data-driven discussion on digital payments adoption.">
+        <img loading="lazy" src="gallery/pra-meeting-2.jpg" alt="PRA meeting"/>
+      </a>
+      <figcaption>
+        <b>PRA Meeting</b>
+        <p>Data-driven discussion on digital payments adoption and analytics pipelines.</p>
+        <span class="tag chip-mini">LUMS</span>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="lums">
+      <a href="gallery/pdma-meeting-3.jpg" data-caption="PDMA coordination — flood exposure analytics and reporting workflow.">
+        <img loading="lazy" src="gallery/pdma-meeting-3.jpg" alt="PDMA meeting"/>
+      </a>
+      <figcaption>
+        <b>PDMA Coordination</b>
+        <p>Flood exposure analytics and reporting workflow alignment.</p>
+        <span class="tag chip-mini">LUMS</span>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="lums">
+      <a href="visuals/pakistan-flood-risk-map.jpg" data-caption="National flood risk map compiled in GEE &amp; ArcGIS.">
+        <img loading="lazy" src="visuals/pakistan-flood-risk-map.jpg" alt="Pakistan flood risk map"/>
+      </a>
+      <figcaption>
+        <b>Pakistan Flood Risk Map</b>
+        <p>National-level risk surface from hydrologic indicators and exposure layers.</p>
+        <span class="tag chip-mini">LUMS</span>
+      </figcaption>
+    </figure>
+
+    <!-- WWF -->
+    <h3 class="gallery-section">Professional — WWF</h3>
+
+    <figure class="card" data-cat="wwf">
+      <a href="visuals/lahore-change-analysis.jpg" data-caption="Lahore urban change analysis — Landsat time series.">
+        <img loading="lazy" src="visuals/lahore-change-analysis.jpg" alt="Lahore change analysis"/>
+      </a>
+      <figcaption>
+        <b>Lahore Urban Change</b>
+        <p>LULC classification (1990–2020) and urban growth visualization.</p>
+        <span class="tag chip-mini">WWF</span>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="wwf">
+      <a href="visuals/lake-manchar-analysis.jpg" data-caption="Manchar &amp; Hammal Lakes — flood extent &amp; temporal change analysis.">
+        <img loading="lazy" src="visuals/lake-manchar-analysis.jpg" alt="Manchar analysis"/>
+      </a>
+      <figcaption>
+        <b>Manchar Lake Change</b>
+        <p>Temporal change using multi-date satellite imagery for flood impact.</p>
+        <span class="tag chip-mini">WWF</span>
+      </figcaption>
+    </figure>
+
+    <!-- Community Projects -->
+    <h3 class="gallery-section">Community Projects</h3>
+
+    <figure class="card" data-cat="community">
+      <a href="visuals/badin-flooded-fraction.jpg" data-caption="Badin flooded fraction — NOAA/GEE workflow.">
+        <img loading="lazy" src="visuals/badin-flooded-fraction.jpg" alt="Badin flooded fraction"/>
+      </a>
+      <figcaption>
+        <b>Badin Flooded Fraction</b>
+        <p>Rapid mapping using GEE and NOAA layers for situational awareness.</p>
+        <span class="tag chip-mini">Community</span>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="community">
+      <a href="visuals/chromite-faceted.gif" data-caption="Chromite faceted geology — animated cartography study.">
+        <img loading="lazy" src="visuals/chromite-faceted.gif" alt="Chromite faceted"/>
+      </a>
+      <figcaption>
+        <b>Chromite Faceted</b>
+        <p>Animated cartography experiment for geology visualization.</p>
+        <span class="tag chip-mini">Community</span>
+      </figcaption>
+    </figure>
+
+    <!-- University Life (PU) -->
+    <h3 class="gallery-section">University Life (PU)</h3>
+
+    <figure class="card" data-cat="pu">
+      <a href="gallery/gis-day-pu-1.jpg" data-caption="GIS Day at PU — outreach booth with geospatial demos.">
+        <img loading="lazy" src="gallery/gis-day-pu-1.jpg" alt="GIS Day PU"/>
+      </a>
+      <figcaption>
+        <b>GIS Day — PU</b>
+        <p>Outreach booth and demos on remote sensing and mapping.</p>
+        <span class="tag chip-mini">PU</span>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="pu">
+      <a href="gallery/batch-2018-2022.jpg" data-caption="Batch 2018–2022 — a snapshot of the journey.">
+        <img loading="lazy" src="gallery/batch-2018-2022.jpg" alt="Batch 2018-2022"/>
+      </a>
+      <figcaption>
+        <b>Batch 2018–2022</b>
+        <p>Memories from PU — academics, events, and field work.</p>
+        <span class="tag chip-mini">PU</span>
+      </figcaption>
+    </figure>
+
+    <!-- Art & Hobbies -->
+    <h3 class="gallery-section">Art &amp; Hobbies</h3>
+
+    <figure class="card" data-cat="art">
+      <a href="visuals/lahore-change-animated.gif" data-caption="Animated city growth — motion design for earth observation.">
+        <img loading="lazy" src="visuals/lahore-change-animated.gif" alt="Animated city growth"/>
+      </a>
+      <figcaption>
+        <b>Animated Growth</b>
+        <p>Motion design experiment from LULC series.</p>
+        <span class="tag chip-mini">Art</span>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="art">
+      <a href="visuals/chromite-jitter.gif" data-caption="Jitter style — playful texture for geological symbology.">
+        <img loading="lazy" src="visuals/chromite-jitter.gif" alt="Chromite jitter art"/>
+      </a>
+      <figcaption>
+        <b>Jitter Cartography</b>
+        <p>Playful textures for symbology and map art.</p>
+        <span class="tag chip-mini">Art</span>
+      </figcaption>
+    </figure>
+
+  </div>
+
+  <!-- Lightbox -->
+  <div id="lightbox" class="lightbox" aria-hidden="true">
+    <button class="lightbox-close" aria-label="Close">&times;</button>
+    <img id="lightbox-img" alt="Expanded"/>
+    <p id="lightbox-cap"></p>
+  </div>
 </section>
+
 
 <!-- ===== BLOG ===== -->
 <section id="blog" class="tab-content section">
