--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@
 </section>
 
 <!-- ===== GALLERY ===== -->
+<!-- ===== GALLERY ===== -->
 <section id="gallery" class="tab-content section">
   <!-- Header card -->
   <div class="gallery-head glassbox lift">
@@ -230,7 +231,7 @@
 
     <figure class="card" data-cat="lums">
       <a href="gallery/pra-meeting-2.jpg" data-caption="PRA meeting — data-driven discussion on digital payments adoption.">
-        <img loading="lazy" src="gallery/pra-meeting-2.jpg" alt="PRA meeting"/>
+        <img loading="lazy" src="gallery/pra-meeting-2.jpg" alt="PRA meeting">
       </a>
       <figcaption>
         <b>PRA Meeting</b>
@@ -241,7 +242,7 @@
 
     <figure class="card" data-cat="lums">
       <a href="gallery/pdma-meeting-3.jpg" data-caption="PDMA coordination — flood exposure analytics and reporting workflow.">
-        <img loading="lazy" src="gallery/pdma-meeting-3.jpg" alt="PDMA meeting"/>
+        <img loading="lazy" src="gallery/pdma-meeting-3.jpg" alt="PDMA meeting">
       </a>
       <figcaption>
         <b>PDMA Coordination</b>
@@ -252,7 +253,7 @@
 
     <figure class="card" data-cat="lums">
       <a href="visuals/pakistan-flood-risk-map.jpg" data-caption="National flood risk map compiled in GEE &amp; ArcGIS.">
-        <img loading="lazy" src="visuals/pakistan-flood-risk-map.jpg" alt="Pakistan flood risk map"/>
+        <img loading="lazy" src="visuals/pakistan-flood-risk-map.jpg" alt="Pakistan flood risk map">
       </a>
       <figcaption>
         <b>Pakistan Flood Risk Map</b>
@@ -266,7 +267,7 @@
 
     <figure class="card" data-cat="wwf">
       <a href="visuals/lahore-change-analysis.jpg" data-caption="Lahore urban change analysis — Landsat time series.">
-        <img loading="lazy" src="visuals/lahore-change-analysis.jpg" alt="Lahore change analysis"/>
+        <img loading="lazy" src="visuals/lahore-change-analysis.jpg" alt="Lahore change analysis">
       </a>
       <figcaption>
         <b>Lahore Urban Change</b>
@@ -277,7 +278,7 @@
 
     <figure class="card" data-cat="wwf">
       <a href="visuals/lake-manchar-analysis.jpg" data-caption="Manchar &amp; Hammal Lakes — flood extent &amp; temporal change analysis.">
-        <img loading="lazy" src="visuals/lake-manchar-analysis.jpg" alt="Manchar analysis"/>
+        <img loading="lazy" src="visuals/lake-manchar-analysis.jpg" alt="Manchar analysis">
       </a>
       <figcaption>
         <b>Manchar Lake Change</b>
@@ -286,12 +287,12 @@
       </figcaption>
     </figure>
 
-    <!-- Community Projects -->
+    <!-- Community -->
     <h3 class="gallery-section">Community Projects</h3>
 
     <figure class="card" data-cat="community">
       <a href="visuals/badin-flooded-fraction.jpg" data-caption="Badin flooded fraction — NOAA/GEE workflow.">
-        <img loading="lazy" src="visuals/badin-flooded-fraction.jpg" alt="Badin flooded fraction"/>
+        <img loading="lazy" src="visuals/badin-flooded-fraction.jpg" alt="Badin flooded fraction">
       </a>
       <figcaption>
         <b>Badin Flooded Fraction</b>
@@ -302,7 +303,7 @@
 
     <figure class="card" data-cat="community">
       <a href="visuals/chromite-faceted.gif" data-caption="Chromite faceted geology — animated cartography study.">
-        <img loading="lazy" src="visuals/chromite-faceted.gif" alt="Chromite faceted"/>
+        <img loading="lazy" src="visuals/chromite-faceted.gif" alt="Chromite faceted">
       </a>
       <figcaption>
         <b>Chromite Faceted</b>
@@ -311,12 +312,12 @@
       </figcaption>
     </figure>
 
-    <!-- University Life (PU) -->
+    <!-- PU -->
     <h3 class="gallery-section">University Life (PU)</h3>
 
     <figure class="card" data-cat="pu">
       <a href="gallery/gis-day-pu-1.jpg" data-caption="GIS Day at PU — outreach booth with geospatial demos.">
-        <img loading="lazy" src="gallery/gis-day-pu-1.jpg" alt="GIS Day PU"/>
+        <img loading="lazy" src="gallery/gis-day-pu-1.jpg" alt="GIS Day PU">
       </a>
       <figcaption>
         <b>GIS Day — PU</b>
@@ -327,7 +328,7 @@
 
     <figure class="card" data-cat="pu">
       <a href="gallery/batch-2018-2022.jpg" data-caption="Batch 2018–2022 — a snapshot of the journey.">
-        <img loading="lazy" src="gallery/batch-2018-2022.jpg" alt="Batch 2018-2022"/>
+        <img loading="lazy" src="gallery/batch-2018-2022.jpg" alt="Batch 2018-2022">
       </a>
       <figcaption>
         <b>Batch 2018–2022</b>
@@ -336,12 +337,12 @@
       </figcaption>
     </figure>
 
-    <!-- Art & Hobbies -->
+    <!-- Art -->
     <h3 class="gallery-section">Art &amp; Hobbies</h3>
 
     <figure class="card" data-cat="art">
       <a href="visuals/lahore-change-animated.gif" data-caption="Animated city growth — motion design for earth observation.">
-        <img loading="lazy" src="visuals/lahore-change-animated.gif" alt="Animated city growth"/>
+        <img loading="lazy" src="visuals/lahore-change-animated.gif" alt="Animated city growth">
       </a>
       <figcaption>
         <b>Animated Growth</b>
@@ -352,7 +353,7 @@
 
     <figure class="card" data-cat="art">
       <a href="visuals/chromite-jitter.gif" data-caption="Jitter style — playful texture for geological symbology.">
-        <img loading="lazy" src="visuals/chromite-jitter.gif" alt="Chromite jitter art"/>
+        <img loading="lazy" src="visuals/chromite-jitter.gif" alt="Chromite jitter art">
       </a>
       <figcaption>
         <b>Jitter Cartography</b>
@@ -366,17 +367,11 @@
   <!-- Lightbox -->
   <div id="lightbox" class="lightbox" aria-hidden="true">
     <button class="lightbox-close" aria-label="Close">&times;</button>
-    <img id="lightbox-img" alt="Expanded"/>
+    <img id="lightbox-img" alt="Expanded">
     <p id="lightbox-cap"></p>
   </div>
 </section>
 
-
-<!-- ===== BLOG ===== -->
-<section id="blog" class="tab-content section">
-  <h2 class="section-title">Blog / Publications</h2>
-  <p class="subtitle">Short write-ups, case studies, and links to publications.</p>
-</section>
 
 <footer>© Somia Asim</footer>
 
@@ -442,6 +437,58 @@ function showTab(evt, id){
   document.addEventListener('keydown', e => { if(e.key === 'Escape') hideLB(); });
 })();
 </script>
+
+<script>
+(function(){
+  const grid = document.getElementById('masonry');
+  if(!grid) return;
+
+  // counters
+  const photos = grid.querySelectorAll('figure.card').length;
+  document.getElementById('g-count').textContent = photos;
+  document.getElementById('g-sections').textContent =
+    grid.querySelectorAll('h3.gallery-section').length;
+  document.getElementById('g-updated').textContent =
+    new Date().toLocaleDateString();
+
+  // filter pills
+  const pills = document.querySelectorAll('.gallery-filters .pill');
+  pills.forEach(p => p.addEventListener('click', () => {
+    pills.forEach(x => x.classList.remove('active'));
+    p.classList.add('active');
+    const f = p.dataset.filter;
+    grid.querySelectorAll('figure.card').forEach(card => {
+      card.style.display = (f === 'all' || card.dataset.cat === f) ? '' : 'none';
+    });
+  }));
+
+  // lightbox
+  const lb = document.getElementById('lightbox');
+  const lbImg = document.getElementById('lightbox-img');
+  const lbCap = document.getElementById('lightbox-cap');
+  const close = lb.querySelector('.lightbox-close');
+
+  grid.addEventListener('click', e => {
+    const a = e.target.closest('a[href]');
+    if(!a) return;
+    e.preventDefault();
+    lbImg.src = a.getAttribute('href');
+    lbCap.textContent = a.dataset.caption || '';
+    lb.setAttribute('aria-hidden', 'false');
+    document.body.style.overflow = 'hidden';
+  });
+
+  function hideLB(){
+    lb.setAttribute('aria-hidden','true');
+    lbImg.src = '';
+    document.body.style.overflow = '';
+  }
+  close.addEventListener('click', hideLB);
+  lb.addEventListener('click', e => { if(e.target === lb) hideLB(); });
+  document.addEventListener('keydown', e => { if(e.key === 'Escape') hideLB(); });
+})();
+</script>
+
 
 </body>
 </html>
