--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header class="topbar">
   <div class="nav-wrap">
     <div class="brand">
-      <img src="assets/icon.png" alt="logo" class="brand-logo">
+      <img src="assets/favicon.png" alt="SA" class="brand-logo">
       <div class="brand-text">
         <h1>SOMIA ASIM</h1>
         <p>Research Associate</p>
@@ -33,7 +33,7 @@
       <a href="#blog">Blog / Publications</a>
     </nav>
 
-    <a href="assets/docs/Somia_Asim_CV.pdf" download class="cv-btn">
+    <a href="assets/Somia_Asim_CV.pdf" download class="cv-btn">
       Resume →
     </a>
   </div>
