--- a/index.html
+++ b/index.html
@@ -57,14 +57,22 @@
   </div>
 
   <div class="about-grid">
-    <div class="about-left">
-      <img class="pfp" src="assets/Somia.jpg" alt="Somia Asim portrait"/>
-      <div class="contact-box glass">
-        <strong>Contact</strong>
-        <a href="mailto:somiaasim26@gmail.com">somiaasim26@gmail.com</a>
-        <a href="https://www.linkedin.com/in/somia-asim-35688617a" target="_blank">LinkedIn</a>
-      </div>
+    
+    <div class="contact-box glass">
+      <strong>Contact:</strong>
+      <a href="mailto:somiaasim26@gmail.com">somiaasim26@gmail.com</a>
+      <span style="opacity:0.3">|</span>
+      <a href="https://www.linkedin.com/in/somia-asim-35688617a" target="_blank">LinkedIn</a>
     </div>
+
+    <div class="about-right glass">
+      <h2 class="section-title">About Me</h2>
+      <p>I’m a geographer and data professional. My journey began during my undergraduate studies at the University of the Punjab, where I developed a lasting interest in spatial analysis, cartography, and environmental data interpretation.</p>
+      <p>I started my professional career at WWF-Pakistan, progressing through roles as GIS Intern, GIS Associate, and GIS Officer. Currently, at the Lahore University of Management Sciences (LUMS), I’ve served as a Research Assistant and now as a Research Associate, contributing to data-driven projects at the intersection of environment, policy, and urban systems.</p>
+      <p>My expertise spans spatial data management, statistical and geospatial analysis, and ML for Earth observation using ArcGIS, QGIS, Google Earth Engine, Python, R, and PostgreSQL. I’m passionate about automating analytical workflows, building dashboards, and visualizing complex datasets.</p>
+    </div>
+    
+  </div>
 
     <div class="about-right glass">
       <h2 class="section-title">About Me</h2>
