--- a/index.html
+++ b/index.html
@@ -216,6 +216,47 @@
     <figure class="card" data-cat="wwf"><a href="assets/visuals/lahore-change-animated.gif"><img src="assets/visuals/lahore-change-animated.gif"></a><figcaption><b>Animated Growth</b><p>GIF storytelling.</p></figcaption></figure>
     <figure class="card" data-cat="wwf"><a href="assets/visuals/lake-manchar-analysis.jpg"><img src="assets/visuals/lake-manchar-analysis.jpg"></a><figcaption><b>Manchar Lake</b><p>Flood extent analysis.</p></figcaption></figure>
 
+    <h3 class="gallery-section">Hydrological Analysis</h3>
+
+    <figure class="card" data-cat="hydro">
+      <a href="assets/visuals/Water_Delineation_Panjgur.pdf" target="_blank">
+         <img src="assets/visuals/panjgur-cover.jpg" alt="Panjgur Report" style="opacity:0.8"> 
+      </a>
+      <figcaption>
+        <b>Water Delineation: Panjgur</b>
+        <p>Hydrological assessment and water delineation in Panjgur District, Pakistan. (PDF Download)</p>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="hydro">
+      <a href="assets/visuals/wfms-1.jpg" data-caption="Woongoolba Flood Mitigation Scheme (WFMS) overview.">
+        <img src="assets/visuals/wfms-1.jpg" alt="WFMS Overview">
+      </a>
+      <figcaption>
+        <b>Woongoolba Flood Scheme</b>
+        <p>Managing flood risks in agricultural areas between Logan and Pimpama Rivers.</p>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="hydro">
+      <a href="assets/visuals/wfms-2.jpg" data-caption="TUFLOW hydrological modeling application.">
+        <img src="assets/visuals/wfms-2.jpg" alt="TUFLOW Modeling">
+      </a>
+      <figcaption>
+        <b>TUFLOW Modeling</b>
+        <p>Assessing capacity to mitigate flood risks using hydrological modeling.</p>
+      </figcaption>
+    </figure>
+
+    <figure class="card" data-cat="hydro">
+      <a href="assets/visuals/wfms-3.jpg" data-caption="Model evaluation against 2021 storm event data.">
+        <img src="assets/visuals/wfms-3.jpg" alt="Model Verification">
+      </a>
+      <figcaption>
+        <b>Model Verification</b>
+        <p>Comparing simulated water levels with observed data from the 2021 storm event.</p>
+      </figcaption>
+    </figure>
   
   
   </div>
